Adding ToC to relevant blogs

--- a/data/blog/az-204.md
+++ b/data/blog/az-204.md
@@ -12,6 +12,8 @@ I have been working with Azure since 2019. I am a Certified Azure Developer and 
 
 If you are just getting started with Azure, you can check my other blog [Azure Fundamentals article](https://abh1navv.hashnode.dev/azure-certifications-where-to-start-and-how-to-prepare)
 
+<TOCInline toc={props.toc} asDisclosure='true'/>
+
 ## About the Exam
 
 [Exam page](https://docs.microsoft.com/en-us/learn/certifications/exams/az-204)
@@ -135,7 +137,7 @@ Exam consisted of about 50-60 questions. Let's talk about the type of these ques
   >
   > This is how the experience needs to be for the user, what level of CosmosDB consistency will you choose.
 
-### Misc. details:
+## Misc. details:
 
 1. It took me 3-4 weeks to complete my preparation and learning. (While working 9-5)
 2. I did not rush with the videos or learning paths, I gave more attention to the hands-on exercises. Rushing with the videos will not be enough if you do not have experience working with the services.
