Added Top posts layout

--- a/data/blog/domain-driven-design.mdx
+++ b/data/blog/domain-driven-design.mdx
@@ -4,6 +4,7 @@ date: '2021-10-10'
 tags: ['microservices', 'architecture']
 draft: false
 summary: 'An introduction to domain driven design'
+image: '/static/images/article-images/java-records.jpg'
 ---
 
 Its been a while since microservices appeared as an attempt to answer challenges we face in modern application development. At the core, the microservices architecture is created around the principles of domain-driven design.
