--- a/data/blog/hexagonal-architecture.mdx
+++ b/data/blog/hexagonal-architecture.mdx
@@ -4,6 +4,7 @@ date: '2021-11-01'
 tags: ['java', 'architecture']
 draft: false
 summary: 'An introduction to hexagonal architecture with code examples'
+image: '/static/images/article-images/java-records.jpg'
 ---
 
 In the evolution of software architecture, [loose coupling](https://en.wikipedia.org/wiki/Loose_coupling) has been at the centre. There is an emphasis on breaking applications into components which can be switched, replaced or updated without affecting the dependent components.
