--- a/data/blog/introduction-to-scaling.mdx
+++ b/data/blog/introduction-to-scaling.mdx
@@ -4,6 +4,7 @@ date: '2021-10-27'
 tags: ['java', 'architecture', 'microservices']
 draft: false
 summary: 'An introduction to scaling in distributed architectures.'
+image: '/static/images/article-images/java-records.jpg'
 ---
 
 Scalability is one of the top concerns when it comes to designing software systems. Applications are generally created with the objective that someday there will be a large number of users using them.
