--- a/data/blog/az-204.md
+++ b/data/blog/az-204.md
@@ -4,6 +4,8 @@ date: '2021-12-05'
 tags: ['azure', 'cloud', 'certification']
 draft: false
 summary: 'How I prepared for Azure Developer Associate (AZ-204) Certification'
+image: '/static/images/article-images/az-204.svg'
+isTop: true
 ---
 
 ![](https://res.cloudinary.com/practicaldev/image/fetch/s--zpfmQDEg--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/gsae23npjqjnaxl8jlel.jpeg)
