--- a/data/blog/az-204.md
+++ b/data/blog/az-204.md
@@ -1,7 +1,7 @@
 ---
 title: 'Azure Developer Certification - preparation guide'
 date: '2021-12-05'
-tags: ['azure', 'cloud', 'certification']
+tags: ['azure', 'cloud', 'certifications']
 draft: false
 summary: 'How I prepared for Azure Developer Associate (AZ-204) Certification'
 image: '/static/images/article-images/az-204.svg'
