Session management fixed ToC

--- a/data/blog/session-management-fundamentals.mdx
+++ b/data/blog/session-management-fundamentals.mdx
@@ -11,24 +11,7 @@ image: '/static/images/article-images/java-records.jpg'
 
 ![Session Management fundamentals banner](https://dev-to-uploads.s3.amazonaws.com/uploads/articles/48hjbvmnlcx5o8lezct1.png)
 
-<details>
-  <summary>Table of Contents</summary>
-
-1. [Introduction](#introduction)
-   - [A simple session management flow](#a-simple-session-management-flow)
-     - [The need for authentication](#the-need-for-authentication)
-     - [The need for authorization](#the-need-for-authorization)
-     - [The purpose of access tokens](#the-purpose-of-access-tokens)
-     - [Session Expiry](#session-expiry)
-2. [Access Tokens](#access-tokens)
-   - [Reference Tokens](#reference-tokens)
-     - [Authorization flow](#authorization-flow)
-     - [Considerations while using reference tokens](#considerations-while-using-reference-tokens)
-   - [Value Tokens](#value-tokens)
-     - [Authorization flow](#authorization-flow)
-     - [Considerations while using value tokens](#considerations-while-using-value-tokens)
-3. [Conclusion](#conclusion)
-   </details>
+<TOCInline toc={props.toc} asDisclosure="true" />
 
 ## Introduction
 
